# whiteboard-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
.github/workflows/: tests.yml
scripts/: bump.sh  cliff.sh
src/whiteboard_mcp/: __main__.py  app.py  history_store.py  ui_i18n.py  user_config.py
src/whiteboard_mcp/templates/: index.html
tests/: conftest.py  test_api.py  test_history_store.py  test_ui_i18n.py  test_user_config.py
