[project]
name = "whiteboard-mcp"
version = "0.1.2"
description = "A web-based whiteboard service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "anyio>=4.0.0"
]

[project.scripts]
whiteboard-mcp = "whiteboard_mcp.__main__:main"
whiteboard_mcp = "whiteboard_mcp.__main__:main"
whiteboard = "whiteboard_mcp.__main__:main"
wb = "whiteboard_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/whiteboard_mcp"]

[tool.bumpversion]
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [unreleased]"
replace = "## [{new_version}]"
